# fd_rust_backend

./: .env  Cargo.toml
.sqlx/: query-1f53aff26a08f9055f000f9250f9f76aa6edf608d7265417d5792e2824aa54f4.json  query-fba64af05e5e1c5c496f8660f219d9cb91f1e499fcd6c5738e2ced59f643fb7a.json
src/: main.rs
src/handlers/: drivers.rs  mod.rs  season.rs  teams.rs
src/models/: api_response.rs  db_objects.rs  mod.rs
src/routes/: driver_routes.rs  mod.rs  season_routes.rs  team_routes.rs
src/utils/: db.rs
