[package]
name = "formula_destruction_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
itertools = "0.13.0"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = "1.39.3"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = "0.3.18"
